--- a/src/styleguide/kss-assets/scss/kss.scss
+++ b/src/styleguide/kss-assets/scss/kss.scss
@@ -1,1 +1,10 @@
+/*!
+ * Bootstrap UI KSS Styleguide
+ *
+ * Created by VisionApps (www.visionapps.cz)
+ */
+
 @import '../../../../node_modules/bootstrap/scss/bootstrap';
+@import '../../../scss/components/variables';
+@import 'components/layout';
+@import 'components/prettify';
