--- a/src/styleguide/kss-assets/scss/kss.scss
+++ b/src/styleguide/kss-assets/scss/kss.scss
@@ -4,7 +4,10 @@
  * Created by VisionApps (www.visionapps.cz)
  */
 
-@import '../../../../node_modules/bootstrap/scss/bootstrap';
+@import '../../../../node_modules/bootstrap/scss/functions';
+@import '../../../../node_modules/bootstrap/scss/mixins';
+@import '../../../../node_modules/bootstrap/scss/variables';
+@import '../../../scss/components/mixins';
 @import '../../../scss/components/variables';
 @import 'components/layout';
 @import 'components/prettify';
